# Execution-Aware-Intra-Day-Alpha-Model

./: README.md
execution_aware_intraday_alpha/: README.md  directory_starter.py  pyproject.toml  requirements.txt
execution_aware_intraday_alpha/ci/: ci.yml
execution_aware_intraday_alpha/config/: backtest.yaml  config.yaml  features.yaml  universe.yaml
execution_aware_intraday_alpha/docker/: Dockerfile
execution_aware_intraday_alpha/examples/: generate_tearsheet.py  quickstart_demo.py
execution_aware_intraday_alpha/src/exa/: __init__.py
execution_aware_intraday_alpha/src/exa/backtest/: engine.py
execution_aware_intraday_alpha/src/exa/data/: loader.py
execution_aware_intraday_alpha/src/exa/exec/: policies.py
execution_aware_intraday_alpha/src/exa/features/: builder.py
execution_aware_intraday_alpha/src/exa/models/: alpha.py
execution_aware_intraday_alpha/src/exa/reports/: tearsheet.py
